--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -36496,13 +36496,15 @@ img {
 }
 
 .fixed-top {
+    background: lightgray !important;
+    padding-right: 0px !important;
     .top-header {
         background-color: black !important;
     }
 
     .four-icon {
-        gap: 13px;
-        padding-right: 20px;
+        gap: 13px !important;
+        /* padding-right: 20px; */
 
         i {
             color: white;
