code updated|Fayyaz|api|header|heademe| |1.0.0|2021-04-29|Initial releas

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -3925,6 +3925,7 @@ tbody.collapse.show {
     border-top-right-radius: 0
 }
 
+
 .nav-pills .nav-link {
     border-radius: 0.25rem
 }
@@ -59513,3 +59514,209 @@ button:focus {
         width: 100% !important;
     }
 }
+
+
+.model-first-div {
+    width: 100%;
+    margin-left: 40px;
+    justify-content: space-around;
+}
+
+    .model-first-div span a {
+        text-transform: uppercase;
+        font-size: 21px;
+        font-weight: 600;
+        display: flex;
+        gap: 30px;
+        justify-content: center;
+        align-items: center;
+        color: #592530 !important;
+        text-decoration: none;
+        border-bottom: 2px solid #592530;
+        width: 99px;
+    }
+
+.sign-button-platform {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: -7px;
+}
+
+    .sign-button-platform button {
+        width: 80%;
+        margin-left: 25px;
+        padding: 10px;
+        background-color: #592530;
+        font-size: 14px;
+        text-transform: uppercase;
+        color: white;
+        letter-spacing: 2px;
+        margin-top: 20px;
+        display: flex;
+        justify-content: center;
+        border: none;
+    }
+
+    .sign-button-platform a button {
+        width: 430px;
+        text-decoration: none;
+    }
+
+    .sign-button-platform button:hover {
+        background-color: white;
+        color: black !important;
+        border: 1px solid #592530;
+    }
+
+    .sign-button-platform i {
+        position: relative;
+        left: 6rem;
+        top: 0.6rem;
+        color: white;
+    }
+
+        .sign-button-platform i:hover {
+            color: #592530 !important;
+        }
+
+.set-email-width {
+    width: 100%;
+    /* flex-direction: column; */
+}
+
+    .set-email-width span {
+        width: 30%;
+        text-transform: uppercase;
+        font-size: 13px;
+        letter-spacing: 2px;
+    }
+
+    .set-email-width input {
+        width: 80%;
+        margin: 0 auto;
+        padding: 7px;
+    }
+
+.remember-me-text {
+    font-size: 12px;
+    font-weight: 400;
+    font-family: 'Times New Roman', Times, serif;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+}
+
+.sign-button-platform button {
+    padding: 10px 20px;
+    /* Adjust padding */
+}
+
+    .sign-button-platform button:hover {
+        background-color: #f0f0f0;
+        /* Change background color on hover */
+    }
+
+.sign-button-platform i {
+    margin-right: 10px;
+}
+
+/* register page */
+.text-flex {
+    width: 100%;
+    /* line-height: 5px; */
+}
+
+.sterms-width {
+    width: 100%;
+    display: block ruby;
+    flex-direction: row;
+}
+
+    .sterms-width a {
+        font-size: 10px !important;
+        text-decoration: none !important;
+        color: #592530 !important;
+    }
+
+    .sterms-width p {
+        font-size: 10px !important;
+    }
+
+.text-flex p {
+    font-size: 10px !important;
+    line-height: 2px;
+    margin-top: 10px;
+    padding: 0px;
+}
+
+.text-flex a {
+    color: #592530 !important;
+    text-decoration: none;
+}
+
+.btn-input-set {
+    width: 100%;
+    display: ruby-base;
+}
+
+    .btn-input-set input {
+        width: 60%;
+    }
+
+    .btn-input-set button {
+        padding: 11px;
+        background: none;
+        border: none;
+        background-color: #592530;
+        color: white;
+        font-size: 13px;
+        text-transform: uppercase;
+        text-align: center;
+        font-weight: 600;
+        gap: 0px;
+    }
+
+        .btn-input-set button:hover {
+            background-color: #f0f0f0;
+            border: 1px solid #592530;
+            color: #592530;
+        }
+
+/* email-section */
+.set-email-width1 {
+    width: 100%;
+    /* flex-direction: column; */
+}
+
+    .set-email-width1 span {
+        width: 30%;
+        text-transform: uppercase;
+        font-size: 13px;
+        letter-spacing: 2px;
+        margin-left: -30px;
+    }
+
+    .set-email-width1 input {
+        width: 80%;
+        /* margin: 0 auto; */
+        padding: 7px;
+        margin-left: 20px;
+    }
+
+.para-text-email-section {
+    font-size: 12px;
+    width: 70%;
+    margin: 0 auto;
+    margin-top: 12px;
+}
+
+
+.dropdown:hover>.dropdown-menu {
+    display: block;
+  }
+  
+  .dropdown>.dropdown-toggle:active {
+    /*Without this, clicking will make it sticky*/
+      pointer-events: none;
+  }
