--- a/src/css/admin-header.css
+++ b/src/css/admin-header.css
@@ -589,13 +589,515 @@ span {
     width: 100%;
     float: left;
 }
-.brand-admin{
+
+.brand-admin {
     width: 50%;
     float: left;
 }
-.brand-admin input{
+
+.brand-admin input {
     width: 100%;
     margin: 0 auto;
     border-radius: 4px;
     padding: 5px;
+}
+
+
+
+/* footer external */
+
+
+.footer {
+    position: relative;
+    z-index: 5;
+    background: #232323;
+    color: #fff;
+    padding: 40px 0
+}
+
+.footer__wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: -10px
+}
+
+.footer__menu,
+.footer__menus,
+.footer__subscribe {
+    width: 100%;
+    /* min-width: 1px; */
+    min-height: 0
+}
+
+.footer__menus {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap
+}
+
+.footer__subscribe {
+    display: none;
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 33.33333%;
+    flex: 0 0 33.33333%;
+    max-width: 33.33333%;
+    padding: 5px 10px
+}
+
+.footer__subscribe-form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-top: 21px;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: flex-start
+}
+
+.footer__subscribe-form .ui-group {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    margin-bottom: 0
+}
+
+.footer__subscribe-form .ui-group input:focus {
+    border-color: #bc4f69
+}
+
+.footer__subscribe-form .btn {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 auto;
+    flex: 0 0 auto;
+    width: auto;
+    margin-left: 20px;
+    background: #000;
+    color: #fff;
+    border: 0
+}
+
+.footer__subscribe-form .btn:hover {
+    background: #bc4f69
+}
+
+.footer__subscribe-form.is-loading .btn {
+    opacity: .6;
+    pointer-events: none
+}
+
+.footer__menu {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 50%;
+    flex: 0 0 50%;
+    max-width: 50%;
+    padding: 5px 10px
+}
+
+.footer__menu-title {
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1;
+    text-transform: uppercase
+}
+
+.footer__menu-list {
+    list-style: none;
+    margin: 20px -5px;
+    padding: 0
+}
+
+.footer__menu-list li {
+    display: block;
+    margin-bottom: 9px
+}
+
+.footer__menu-list li:last-child {
+    margin-bottom: 0
+}
+
+.footer__menu-list a {
+    display: inline-block;
+    padding: 5px;
+    font-size: 12px;
+    color: white;
+}
+
+.footer__menu-list a:hover {
+    color: hsla(0, 0%, 100%, .7)
+}
+
+.footer__menu-socials {
+    list-style: none;
+    margin: 18px -5px;
+    padding: 0
+}
+
+.footer__menu-socials li {
+    display: inline-block;
+    margin-right: 20px
+}
+
+.footer__menu-socials li:last-child {
+    margin-right: 0
+}
+
+.footer__menu-socials a {
+    display: inline-block;
+    padding: 5px;
+    font-size: 0;
+    -webkit-transition: color .25s ease-in-out;
+    -o-transition: color .25s ease-in-out;
+    transition: color .25s ease-in-out
+}
+
+.footer__menu-socials a .ico {
+    font-size: 25px
+}
+
+.footer__menu-socials a:hover {
+    color: hsla(0, 0%, 100%, .7)
+}
+
+.footer__payments {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    margin: 5px 0 10px
+}
+
+.footer__payment {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 auto;
+    flex: 0 0 auto;
+    margin-right: 22px;
+    margin-bottom: 10px;
+    font-size: 0;
+    color: #bbb
+}
+
+.footer__payment:last-child {
+    margin-right: 0
+}
+
+.footer__payment .ico-mono-Visa {
+    font-size: 14px
+}
+
+.footer__payment .ico-mono-AmericanExpress {
+    font-size: 17px
+}
+
+.footer__payment .ico-color-MasterCard {
+    font-size: 26px
+}
+
+.footer__payment .ico-mono-Paypal {
+    font-size: 12px
+}
+
+.footer__payment .ico-mono-ApplePay,
+.footer__payment .ico-mono-GooglePay {
+    font-size: 17px
+}
+
+.footer__copyright {
+    margin-top: 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center
+}
+
+.footer__copyright-logo {
+    font-size: 0
+}
+
+.footer__copyright-logo .ico {
+    font-size: 32px
+}
+
+.footer__copyright-text {
+    margin-top: 15px;
+    font-size: 12px
+}
+
+.footer__separator {
+    margin-top: 20px;
+    margin-bottom: 40px;
+    height: 1px;
+    border-bottom: 1px solid #3d3d3d
+}
+
+.footer__top-searches {
+    padding-bottom: 20px
+}
+
+.footer__top-searches .footer__menu {
+    padding-bottom: 0
+}
+
+.footer__top-searches .footer__menu-title {
+    width: 150%
+}
+
+.footer__top-searches .footer__menu-list {
+    margin-bottom: 0
+}
+
+.footer__top-searches .footer__menu-list li {
+    margin-bottom: 4px;
+    font-weight: 300
+}
+
+.footer__top-searches .footer__menu-list li a {
+    font-size: 11px
+}
+
+.footer__top-searches .footer__menu.no-title {
+    padding-top: 0;
+    padding-bottom: 0
+}
+
+.footer__top-searches .footer__menu.no-title .footer__menu-list {
+    margin-top: 0
+}
+
+.footer__top-searches .footer__menu.no-title:nth-child(2) {
+    padding-top: 39px
+}
+
+.footer .container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column
+}
+
+.footer__main {
+    -webkit-box-ordinal-group: 2;
+    -ms-flex-order: 1;
+    order: 1;
+    height: 268px !important;
+    
+}
+
+.footer__separator--one {
+    -webkit-box-ordinal-group: 3;
+    -ms-flex-order: 2;
+    order: 2
+}
+
+.footer__top-searches {
+    -webkit-box-ordinal-group: 4;
+    -ms-flex-order: 3;
+    order: 3
+}
+
+.footer__separator--two {
+    -webkit-box-ordinal-group: 5;
+    -ms-flex-order: 4;
+    order: 4
+}
+
+.footer__bottom {
+    -webkit-box-ordinal-group: 6;
+    -ms-flex-order: 5;
+    order: 5
+}
+
+.footer__copyright {
+    -webkit-box-ordinal-group: 7;
+    -ms-flex-order: 6;
+    order: 6
+}
+
+@media only screen and (min-width:769px) {
+    .footer {
+        padding: 60px 0 40px
+    }
+
+    .footer__payment {
+        margin-right: 30px
+    }
+
+    .footer__payment:last-child {
+        margin-right: 0
+    }
+}
+
+@media only screen and (min-width:992px) {
+    .footer {
+        padding-top: 85px
+    }
+
+    .footer__menus {
+        /* -webkit-box-flex: 0; */
+        /* -ms-flex: 0 0 66.66667%; */
+        /* flex: 0 0 66.66667%; */
+        /* max-width: 66.66667% */
+    }
+
+    .footer__subscribe {
+        display: block
+    }
+
+    .footer__payments {
+        margin-top: 70px;
+        -webkit-box-pack: end;
+        -ms-flex-pack: end;
+        justify-content: flex-end
+    }
+
+    .footer__main .footer__menu {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 0 25%;
+        flex: 0 0 25%;
+        max-width: 25%
+    }
+
+    .footer__main .footer__menu:first-child {
+        -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+        order: 1
+    }
+
+    .footer__main .footer__menu:nth-child(2) {
+        -webkit-box-ordinal-group: 4;
+        -ms-flex-order: 3;
+        order: 3
+    }
+
+    .footer__main .footer__menu:nth-child(3) {
+        -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+        order: 2
+    }
+
+    .footer__main .footer__menu:nth-child(4) {
+        -webkit-box-ordinal-group: 5;
+        -ms-flex-order: 4;
+        order: 4
+    }
+
+    .footer__bottom {
+        display: none
+    }
+
+    .footer__copyright {
+        margin-top: 10px;
+        margin-bottom: 10px
+    }
+
+    .footer__top-searches .footer__menu {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 0 16.66667%;
+        flex: 0 0 16.66667%;
+        max-width: 16.66667%
+    }
+
+    .footer__top-searches .footer__menu-list li {
+        margin-bottom: 1px;
+        font-weight: 300
+    }
+
+    .footer__top-searches .footer__menu-list li a {
+        font-size: 11px
+    }
+
+    .footer__top-searches .footer__menu.no-title .footer__menu-list {
+        margin-top: 34px
+    }
+
+    .footer__top-searches .footer__menu.no-title:nth-child(2) {
+        padding-top: 0
+    }
+
+    .footer__separator {
+        margin-top: 30px;
+        margin-bottom: 50px
+    }
+}
+
+@media only screen and (min-width:1200px) {
+    .footer__subscribe .btn {
+        min-width: 110px
+    }
+}
+
+@media only screen and (min-width:992px) {
+
+    .cart-package__footer {
+        border-top: 2px solid #fff
+    }
+}
+
+.cart-package__footer .cart-package__text {
+    padding: 20px
+}
+
+.cart-package__footer .cart-package__text+.cart-package__text {
+    padding-top: 0;
+    margin-top: -5px
+}
+
+.cart-package__footer .cart-package__text {
+    padding: 10px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between
+}
+
+.cart-package__footer {
+    border-top: 1px solid #d3dede
+}
+
+footer {
+    display: block;
+}
+
+.ui-group__autocomplete__footer {
+    padding: 10px
+}
+
+.ui-group__autocomplete__footer .btn {
+    width: 100%
+}
+
+.ui-group__autocomplete__footer .powered-by {
+    text-align: right;
+    margin-top: 10px
+}
+
+.ui-group__autocomplete__footer .powered-by img {
+    height: 14px
 }
