--- a/src/css/footer-pages.css
+++ b/src/css/footer-pages.css
@@ -1,5 +1,3 @@
-
-
 @media only screen and (-o-min-device-pixel-ratio:2/1),
 only screen and (-webkit-min-device-pixel-ratio:2),
 only screen and (min-device-pixel-ratio:2),
@@ -856,7 +854,7 @@ template {
 (min-resolution:1.1dppx),
 (min-resolution:105dpi) {
 
-    
+
 
     .pswp--svg .pswp__button--arrow--left,
     .pswp--svg .pswp__button--arrow--right {
@@ -1362,7 +1360,7 @@ a.pswp__share--download:hover {
         opacity: 1
     }
 
-    
+
 }
 
 @media only screen and (min-width:992px) and (-o-min-device-pixel-ratio:11/10),
@@ -1372,7 +1370,7 @@ only screen and (min-width:992px) and (-webkit-min-device-pixel-ratio:1.09375),
 only screen and (min-width:992px) and (min-resolution:1.1dppx),
 only screen and (min-width:992px) and (min-resolution:105dpi) {
 
-    
+
 
     .pswp--svg .pswp__button--arrow--left,
     .pswp--svg .pswp__button--arrow--right {
@@ -1650,7 +1648,7 @@ only screen and (min-width:992px) and (min-resolution:105dpi) {
         opacity: 1
     }
 
-    
+
 
     .pswp--css_animation .pswp__preloader--active {
         opacity: 1
@@ -8556,6 +8554,7 @@ a[name] {
     flex: 0 0 auto;
     padding: 20px
 }
+
 .panel__head-select {
     padding-right: 40px
 }
@@ -15274,9 +15273,155 @@ body:not(.is-mobile) .product-card__heart.is-active:hover {
     }
 }
 
-/* @media only screen and (min-width:992px) {
-    .is-ie .whyUsCard__image {
-        width: 200px;
-        height: 200px;
+
+.loyalty__hero {
+    margin-top: 20px;
+    margin-bottom: 20px
+}
+
+.loyalty__hero img {
+    width: 100%
+}
+
+.loyalty-earn .container {
+    padding-top: 20px
+}
+
+.loyalty-earn__options__option {
+    padding-bottom: 10px
+}
+
+.loyalty-earn__options__option .inner {
+    border: 1px solid #d3dede;
+    padding: 20px;
+    text-align: center;
+    height: 100%
+}
+
+.loyalty-earn__options__option .inner .points {
+    margin: 25px 10px;
+    font-weight: 600
+}
+
+.loyalty-earn__options__option h3 {
+    font-weight: 500;
+    font-size: 20px
+}
+
+.loyalty-earn__options__option.coming-soon .inner {
+    background-color: #f3f6f6
+}
+
+.loyalty-tiers {
+    padding: 10px 0 40px
+}
+
+.loyalty__tiers {
+    margin-top: 20px
+}
+
+.loyalty__tier {
+    margin-bottom: 10px
+}
+
+.loyalty__tier .inner {
+    padding: 20px;
+    text-align: center;
+    color: #fff
+}
+
+.loyalty__tier .inner.bronze {
+    background-color: rgba(126, 55, 7, .91)
+}
+
+.loyalty__tier .inner.silver {
+    background-color: #929292
+}
+
+.loyalty__tier .inner.gold {
+    background-color: #b8860b
+}
+
+.loyalty__tier .inner h3 {
+    margin: 10px 0;
+    font-family: Butler, serif;
+    font-size: 36px;
+    font-weight: 300
+}
+
+.loyalty__tier__features ul {
+    text-align: left;
+    margin: 30px 0 0;
+    list-style-type: revert;
+    display: block;
+    padding: 0 0 0 10%;
+    font-weight: 300
+}
+
+.loyalty__tier__features ul li {
+    display: list-item;
+    margin: 0 0 10px
+}
+
+@media only screen and (min-width:769px) {
+    .loyalty__hero {
+        margin-top: -100px;
+        float: right;
+        width: 400px;
+        position: relative;
+        margin-left: 40px
     }
-} */
+
+    .loyalty__hero img {
+        height: 100%
+    }
+
+    .loyalty-earn .container {
+        padding-top: 40px
+    }
+
+    .loyalty-earn__options {
+        display: -webkit-inline-box;
+        display: -ms-inline-flexbox;
+        display: inline-flex;
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+        margin: 0 -10px
+    }
+
+    .loyalty-earn__options__option {
+        padding: 10px;
+        -ms-flex-preferred-size: 33.33333%;
+        flex-basis: 33.33333%;
+        max-width: 33.33333%
+    }
+
+    .loyalty-tiers {
+        padding: 70px 0 60px
+    }
+
+    .loyalty-tiers h2 {
+        margin-top: 0
+    }
+
+    .loyalty__tiers {
+        display: -webkit-inline-box;
+        display: -ms-inline-flexbox;
+        display: inline-flex;
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+        margin: 20px -10px;
+        width: 100%
+    }
+
+    .loyalty__tier {
+        padding: 10px;
+        -ms-flex-preferred-size: 33.33333%;
+        flex-basis: 33.33333%;
+        max-width: 33.33333%
+    }
+
+    .loyalty__tier .inner {
+        height: 270px
+    }
+}
