--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -192,14 +192,14 @@ a:not([href]):not([tabindex]) {
 
     /*header-width*/
     .top-header-width-set-main a{
-        width: 10%;
+        width: 7%;
         display: flex;
         flex-direction: row;
         justify-content:center;
 
     }
 .List-By-Wardrobe {
-    width: 19% !important;
+    width: 10% !important;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -16206,7 +16206,7 @@ hr {
     padding-bottom: 0.15em;
     border-bottom: 1px solid #592530;
     font-size: 10px;
-    font-weight: bold;
+    font-weight: 500;
     letter-spacing: 1px;
     text-decoration: none;
     transition: all 300ms
@@ -27341,9 +27341,9 @@ div.filter-bar select {
 .navbar-menu-section .nav-link {
     color: black;
     text-transform: uppercase;
-    font-weight: bold;
-    letter-spacing: 5px;
-    font-size: 12px;
+    font-weight: 500;
+    /* letter-spacing: 2px; */
+    font-size: 10px;
     font-family: sans-serif;
     line-height: 12px;
     padding: 0;
@@ -27357,7 +27357,7 @@ div.filter-bar select {
 
 .navbar-menu-section .nav-link.active {
     color: #AA5959;
-    font-weight: bold
+    font-weight: 500;
 }
 
 .navbar-menu-section .nav-link.-italic>span {
@@ -29371,8 +29371,8 @@ body.regular-backdrop .modal-backdrop {
 
 .lender-details-section .default-link {
     font-family: europa, sans-serif;
-    font-size: 12px;
-    font-weight: bold;
+    font-size: 11px;
+    font-weight: 500;
     line-height: 15px;
     letter-spacing: 1.2px
 }
@@ -56572,9 +56572,9 @@ body.ios.rental-process-layout .position-sticky-top {
     border-radius: 3px;
     color: #241E19;
     font-size: 12px;
-    letter-spacing: 1.2px;
-    line-height: 12px;
-    font-weight: bold;
+    letter-spacing: 1px;
+    line-height: 11px;
+    font-weight: 500;
     padding: 3px 10px;
     width: -moz-fit-content;
     width: fit-content
