--- a/src/css/admin-header.css
+++ b/src/css/admin-header.css
@@ -638,8 +638,32 @@ span {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap
+    /* -ms-flex-wrap: wrap;
+    flex-wrap: wrap */
+}
+
+.Subscribe-footer-upper-btn {
+    padding: 10px;
+    width: 220px;
+    border-radius: 4px;
+    background-color: white;
+    color: #000;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-size: 15px;
+    font-weight: bold;
+    border: 1.5px solid wheat;
+    margin-top: 20px;
+    margin-left: 30px;
+    transition: transform 0.3s;
+}
+
+.Subscribe-footer-upper-btn:hover {
+    background-color: orange;
+    color: white;
+    margin-left: 30px;
+    box-shadow: 5px 10px 20px orange;
+    border: 1px solid white;
 }
 
 .footer__subscribe {
@@ -697,7 +721,9 @@ span {
     -ms-flex: 0 0 50%;
     flex: 0 0 50%;
     max-width: 50%;
-    padding: 5px 10px
+    padding: 5px 10px;
+    /* text-align: center; */
+    font-size: 16px;
 }
 
 .footer__menu-title {
@@ -861,7 +887,7 @@ span {
 }
 
 .footer__top-searches .footer__menu-title {
-    width: 150%
+    width: 140%
 }
 
 .footer__top-searches .footer__menu-list {
@@ -905,7 +931,7 @@ span {
     -ms-flex-order: 1;
     order: 1;
     height: 268px !important;
-    
+
 }
 
 .footer__separator--one {
@@ -950,6 +976,10 @@ span {
     .footer__payment:last-child {
         margin-right: 0
     }
+
+    /* .footer___bottom-width {
+         margin-top: 250px !important; 
+    }  */
 }
 
 @media only screen and (min-width:992px) {
@@ -957,12 +987,9 @@ span {
         padding-top: 85px
     }
 
-    .footer__menus {
-        /* -webkit-box-flex: 0; */
-        /* -ms-flex: 0 0 66.66667%; */
-        /* flex: 0 0 66.66667%; */
-        /* max-width: 66.66667% */
-    }
+    /* .footer___bottom-width {
+        /* margin-top: 250px !important; */
+    /* }  */
 
     .footer__subscribe {
         display: block
@@ -979,7 +1006,7 @@ span {
         -webkit-box-flex: 0;
         -ms-flex: 0 0 25%;
         flex: 0 0 25%;
-        max-width: 25%
+        max-width: 20%
     }
 
     .footer__main .footer__menu:first-child {
@@ -1045,6 +1072,13 @@ span {
     }
 }
 
+@media (max-width:768px) {
+    .footer___bottom-width {
+        text-align: center !important;
+    }
+
+}
+
 @media only screen and (min-width:1200px) {
     .footer__subscribe .btn {
         min-width: 110px
@@ -1100,4 +1134,347 @@ footer {
 
 .ui-group__autocomplete__footer .powered-by img {
     height: 14px
+}
+
+
+
+/* product detail model */
+.modal-dialog {
+    max-width: 85%;
+    margin: 1.75rem auto;
+}
+
+.modal-content {
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    width: 100%;
+    pointer-events: auto;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid rgba(0, 0, 0, .2);
+    border-radius: .3rem;
+    outline: 0;
+}
+
+.modal-header {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: start;
+    align-items: flex-start;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    padding: 1rem 1rem;
+    border-bottom: 1px solid #dee2e6;
+    border-top-left-radius: calc(.3rem - 1px);
+    border-top-right-radius: calc(.3rem - 1px);
+}
+
+
+.modal-body {
+    position: relative;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    padding: 1rem;
+}
+
+.scroll-four-img img {
+    width: 80%;
+    height: 150px;
+    margin: 10px;
+    padding: 5px;
+}
+
+.scroll-four-img img:hover {
+    border: 1px solid rgb(107, 106, 106);
+}
+
+.scroll-four-img1 img {
+    width: 100%;
+    height: 600px;
+}
+
+.four-survey-icon {
+    display: flex;
+    flex-direction: row;
+}
+
+.four-survey-icon i {
+    font-size: 8px;
+    color: black;
+    margin-top: 10px;
+    margin-left: 4px;
+}
+
+.Bottega-Veneta-width h2 {
+    font-size: 40px;
+    font-weight: 300;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+.boxesthree .box-three {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+.boxesthree .box-three span {
+    width: 50px;
+    height: 40px;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    border: 1px solid black;
+    margin: 8px;
+}
+
+.boxesthree .box-three span:hover {
+    background-color: rgb(148, 46, 46);
+    color: white;
+    border: white;
+}
+
+.RENTAL-PERIOD .box-three span {
+    width: 170px;
+    height: 40px;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    border: 1px solid black;
+    margin: 8px;
+}
+
+.RENTAL-PERIOD .box-three span:hover {
+    background-color: rgb(148, 46, 46);
+    color: white;
+    border: white;
+}
+
+.RENTAL-PERIOD select {
+    width: 95%;
+    padding: 7px;
+    margin-top: 8px;
+
+}
+
+.btn-BOOK-NOW {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+.btn-BOOK-NOW button {
+    width: 75%;
+    padding: 15px;
+    border: 1px solid black;
+    text-align: center;
+    align-items: center;
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    text-transform: uppercase;
+    background-color: whitesmoke;
+    font-weight: bold;
+    font-size: 14px;
+}
+
+.btn-BOOK-NOW button:hover {
+    background-color: rgb(148, 46, 46);
+    color: white;
+    border: white;
+}
+
+.btn-BOOK-NOW i {
+    width: 20%;
+    padding: 15px;
+    border: 1px solid black;
+    text-align: center;
+    align-items: center;
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    text-transform: uppercase;
+    background-color: whitesmoke;
+    font-weight: bold;
+    font-size: 20px;
+    margin-left: 8px;
+}
+
+.btn-BOOK-NOW i:hover {
+    background-color: rgb(148, 46, 46);
+    color: white;
+    border: white;
+}
+
+
+/* model on image */
+.modal-dialog {
+    max-width: 85%;
+    margin: 1.75rem auto;
+}
+
+.modal-content {
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    width: 100%;
+    pointer-events: auto;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid rgba(0, 0, 0, .2);
+    border-radius: .3rem;
+    outline: 0;
+}
+
+.modal-header {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: start;
+    align-items: flex-start;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    padding: 1rem 1rem;
+    border-bottom: 1px solid #dee2e6;
+    border-top-left-radius: calc(.3rem - 1px);
+    border-top-right-radius: calc(.3rem - 1px);
+}
+
+
+.modal-body {
+    position: relative;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    padding: 1rem;
+}
+
+.scroll-four-img img {
+    width: 80%;
+    height: 150px;
+    margin: 10px;
+    padding: 5px;
+}
+
+.scroll-four-img img:hover {
+    border: 1px solid rgb(107, 106, 106);
+}
+
+.scroll-four-img1 img {
+    width: 100%;
+    height: 600px;
+}
+
+.four-survey-icon {
+    display: flex;
+    flex-direction: row;
+}
+
+.four-survey-icon i {
+    font-size: 8px;
+    color: black;
+    margin-top: 10px;
+    margin-left: 4px;
+}
+
+.Bottega-Veneta-width h2 {
+    font-size: 40px;
+    font-weight: 300;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+.boxesthree .box-three {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+.boxesthree .box-three span {
+    width: 50px;
+    height: 40px;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    border: 1px solid black;
+    margin: 8px;
+}
+
+.boxesthree .box-three span:hover {
+    background-color: rgb(148, 46, 46);
+    color: white;
+    border: white;
+}
+
+.RENTAL-PERIOD .box-three span {
+    width: 170px;
+    height: 40px;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    border: 1px solid black;
+    margin: 8px;
+}
+
+.RENTAL-PERIOD .box-three span:hover {
+    background-color: rgb(148, 46, 46);
+    color: white;
+    border: white;
+}
+
+.RENTAL-PERIOD select {
+    width: 95%;
+    padding: 7px;
+    margin-top: 8px;
+
+}
+
+.btn-BOOK-NOW {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+.btn-BOOK-NOW button {
+    width: 75%;
+    padding: 15px;
+    border: 1px solid black;
+    text-align: center;
+    align-items: center;
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    text-transform: uppercase;
+    background-color: whitesmoke;
+    font-weight: bold;
+    font-size: 14px;
+}
+
+.btn-BOOK-NOW button:hover {
+    background-color: rgb(148, 46, 46);
+    color: white;
+    border: white;
+}
+
+.btn-BOOK-NOW i {
+    width: 20%;
+    padding: 15px;
+    border: 1px solid black;
+    text-align: center;
+    align-items: center;
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    text-transform: uppercase;
+    background-color: whitesmoke;
+    font-weight: bold;
+    font-size: 20px;
+    margin-left: 8px;
+}
+
+.btn-BOOK-NOW i:hover {
+    background-color: rgb(148, 46, 46);
+    color: white;
+    border: white;
 }
