--- a/src/css/admin-header.css
+++ b/src/css/admin-header.css
@@ -644,25 +644,23 @@ span {
 
 .Subscribe-footer-upper-btn {
     padding: 10px;
-    width: 220px;
+    width: 230px;
     border-radius: 4px;
     background-color: white;
     color: #000;
     text-transform: uppercase;
     letter-spacing: 1px;
-    font-size: 15px;
+    font-size: 13px;
     font-weight: bold;
     border: 1.5px solid wheat;
     margin-top: 20px;
-    margin-left: 30px;
-    transition: transform 0.3s;
+    margin-left: 0px;
+    transition: all 0.3s ease-in-out;
 }
 
 .Subscribe-footer-upper-btn:hover {
-    background-color: orange;
+    background-color: rgb(31, 31, 31);
     color: white;
-    margin-left: 30px;
-    box-shadow: 5px 10px 20px orange;
     border: 1px solid white;
 }
 
