--- a/src/css/admin-header.css
+++ b/src/css/admin-header.css
@@ -10,6 +10,11 @@ body {
     list-style: none;
 }
 
+header{
+    position: sticky !important;
+    top: 0 !important;
+    z-index: 1000;
+}
 .navbar-admin {
     background-color: white;
     display: flex;
@@ -17,7 +22,7 @@ body {
     border-bottom: 1px solid rgba(0, 0, 0, 0.285);
     align-items: center;
     padding: 10px 20px;
-    z-index: 1;
+
 }
 
 .navbar-brand-admin {
@@ -540,15 +545,15 @@ span {
     margin: 41px 0px;
   }
   
-  .container {
+  .admin-login-container {
     border-radius: 1px;
     padding: 30px 40px 20px 40px;
     box-sizing: border-box;
     font-family: sans-serif;
     color: #737373;
     border: 1px solid rgb(219, 219, 219);
+    background: rgb(148, 46, 46) !important;
     text-align: center;
-    background: white;
   }
   
   .container svg {
@@ -557,6 +562,7 @@ span {
   }
   .container .content{
     width: 30%;
+    background: white;
     box-shadow: 0px 0px 7px -1px black;
     border-radius: 10px;
     padding: 20px;
