--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -542,7 +542,7 @@ mark,
 
 .img-fluid {
     max-width: 100%;
-    height: 420px;
+    height: 350px;
 }
 
 .img-thumbnail {
@@ -9873,7 +9873,8 @@ body.component-based-page h4 {
     -webkit-touch-callout: none;
     -khtml-user-select: none;
     touch-action: pan-y;
-    -webkit-tap-highlight-color: transparent
+    -webkit-tap-highlight-color: transparent;
+ 
 }
 
 .slick-list {
@@ -31984,7 +31985,7 @@ img {
 }
 
 .rental-process-section .order-summary-snippet .img-fluid {
-    min-height: 223px
+    min-height: 223px;
 }
 
 .rental-process-section .order-summary-snippet__dates {
