--- a/src/css/footer-pages.css
+++ b/src/css/footer-pages.css
@@ -12646,7 +12646,8 @@ body:not(.is-mobile) .plpRefinements__section-name:not(.is-not-toggable):hover {
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
-    letter-spacing: 0
+    letter-spacing: 0;
+    width: 200px;
 }
 
 .product-card__image {
@@ -12654,7 +12655,9 @@ body:not(.is-mobile) .plpRefinements__section-name:not(.is-not-toggable):hover {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 auto;
     flex: 0 0 auto;
-    width: 100%
+    width: 100%;
+    height: 200px;
+    object-fit: fill;
 }
 
 .product-card__image .scaler {
